--- a/gui/src/renderer/help.html
+++ b/gui/src/renderer/help.html
@@ -49,7 +49,9 @@
             <span class="caption" id="main_caption">Help</span>
             <a href="https://eta.readthedocs.io/" target="_blank">ONLINE
                 DOCUMENTATION</a>
-            <a href="#" class="menu-link" id="btn_close">Exit</a>
+            
+            <a href="https://github.com/timetag/ETA/releases"  target="_blank" >ETA GUI Version: 0.7.1</a>
+            <a href="#" class="menu-link"  id="btn_close">Exit</a>
         </div>
     </div>
 
@@ -59,7 +61,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="card">
-                        <img class="card-img-top gif" src="img/coincidence.png">
+                        <img class="card-img-top " src="img/coincidence.png">
                         <div class="card-body">
                             <h5 class="card-title"><a href="#" id="btn_create_act">TUTORIAL: USING BUILTIN RECIPES</a></h5>
                             <p class="card-text">A tutorial for running a correlational analysis with two detectors in real-time.
@@ -70,7 +72,7 @@
                 
                 <div class="col-sm-4">
                     <div class="card">
-                        <img class="card-img-top gif" src="img/shortcuts.png">
+                        <img class="card-img-top " src="img/shortcuts.png">
                         <div class="card-body">
                             <h5 class="card-title"><a href="https://eta.readthedocs.io/en/latest/workflow.html" target="_blank">TUTORIAL: MAKING RECIPES</a></h5>
                             <p class="card-text">Learn more about how to create an ETA recipe for your experiment.</p>
