--- a/etabackend/static/index.html
+++ b/etabackend/static/index.html
@@ -51,6 +51,8 @@
         <a href="#" class="menu-link" id="btn_settings">Settings</a>
         <a href="#" class="menu-link" id="btn_compile">VI Checking</a>
         <a href="help.html" class="menu-link"  target="_blank" >Help</a>
+        <a href="shutdown" class="menu-link" id="btn_shutdown">Shutdown</a>
+
     </div>
     <div id="svg_container">
         <h2 id="exp_tilte" class="bd-text-purple-bright">Experiment Setup</h2>
