gui: move shutdown to the settings panel

--- a/etabackend/static/index.html
+++ b/etabackend/static/index.html
@@ -51,7 +51,7 @@
         <a href="#" class="menu-link" id="btn_settings">Settings</a>
         <a href="#" class="menu-link" id="btn_compile">VI Checking</a>
         <a href="help.html" class="menu-link"  target="_blank" >Help</a>
-        <a href="shutdown" class="menu-link" id="btn_shutdown">Shutdown</a>
+
 
     </div>
     <div id="svg_container">
@@ -204,6 +204,7 @@
 
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-outline-dark btn_discard" id="btn_shutdown">Shutdown Backend</button>
                     <button type="submit" class="btn btn-outline-dark" id="btn_connect">Connect</button>
                 </div>
 
