gui: ask for launch backend locally

--- a/etabackend/static/index.html
+++ b/etabackend/static/index.html
@@ -242,6 +242,9 @@
                         <div class="custom-control custom-radio">
                             <input class="custom-control-input" type="radio" id="radio5" name="recipe" value="Simulation" /><label class="custom-control-label" for="radio5">Simulation</label>
                         </div>
+                        <div class="custom-control custom-radio">
+                            <input class="custom-control-input" type="radio" id="radio6" name="recipe" value="Osci_mode_QuTAG" /><label class="custom-control-label" for="radio6">Osci_mode_QuTAG</label>
+                        </div>
                         <h> <a href="https://eta.readthedocs.io/en/latest/recipes.html" target="_blank">Learn more about the pre-made recipies...</a></h>
                     </div>
                     <div class="modal-footer">
