--- a/etabackend/static/index.html
+++ b/etabackend/static/index.html
@@ -243,7 +243,7 @@
                             <input class="custom-control-input" type="radio" id="radio5" name="recipe" value="Simulation" /><label class="custom-control-label" for="radio5">Simulation</label>
                         </div>
                         <div class="custom-control custom-radio">
-                            <input class="custom-control-input" type="radio" id="radio6" name="recipe" value="Osci_mode_QuTAG" /><label class="custom-control-label" for="radio6">Osci_mode_QuTAG</label>
+                            <input class="custom-control-input" type="radio" id="radio6" name="recipe" value="Oscilloscope_QuTAG" /><label class="custom-control-label" for="radio6">Oscilloscope - QuTAG</label>
                         </div>
                         <h> <a href="https://eta.readthedocs.io/en/latest/recipes.html" target="_blank">Learn more about the pre-made recipies...</a></h>
                     </div>
