frontend: Upgraded bootstrap to 4.5, enables scrollable modal window that is enabled in the logview now.

--- a/etabackend/static/index.html
+++ b/etabackend/static/index.html
@@ -51,9 +51,8 @@
         <a href="#" class="menu-link" id="btn_settings">Settings</a>
         <a href="#" class="menu-link" id="btn_compile">VI Checking</a>
         <a href="help.html" class="menu-link"  target="_blank" >Help</a>
-
-
     </div>
+
     <div id="svg_container">
         <h2 id="exp_tilte" class="bd-text-purple-bright">Experiment Setup</h2>
         <div id="table" class="table-editable">
@@ -160,7 +159,7 @@
     </div>
 
     <div class="modal fade" id="remoteModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" data-backdrop="static" data-keyboard="false">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog modal-dialog-scrollable" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">ETA Backend</h5>
