--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -21,7 +21,7 @@
       display: inline-block;
       font-size: 16px;
       margin: 4px 2px;
-      transition-duration: 0.4s;
+      transition-duration: 0.2s;
       cursor: pointer;
       outline: none;
     }
@@ -49,6 +49,7 @@
       transform: translate(-50%, -50%);
     }
     input[type=text], select, textarea {
+      font-family: inherit;
       width: 150px;
       padding: 9px;
       border: 1px solid #ccc;
