--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -25,7 +25,7 @@
       }
     .button {
       font-family: inherit;
-      font-size: 100%%;
+      font-size: 100%;
       border-radius: 12px;
       background-color: #343a40; /* darkgrey */
       border: none;
