docs: update advanced usage packaging: bump to 0.9.2 recipe: add headerless example

--- a/etabackend/static/index.html
+++ b/etabackend/static/index.html
@@ -341,7 +341,11 @@
                                     <div class="custom-control custom-radio ">
                                         <input class="custom-control-input" type="radio" id="radio-more7" name="recipe" value="Countrate" />
                                         <label  class="custom-control-label" for="radio-more7">Old Countrate</label>
-                                    </div>    
+                                    </div>
+                                    <div class="custom-control custom-radio">
+                                        <input class="custom-control-input" type="radio" id="radio-more8" name="recipe" value="Correlation-hydraharp-headerless" />
+                                        <label  class="custom-control-label" for="radio-more8">Correlation for the a header-less file</label>
+                                    </div>
                                 </div>
                             </div>
                         </div>
