packaging: bundle conda env and bump version

--- a/gui/src/renderer/index.html
+++ b/gui/src/renderer/index.html
@@ -138,7 +138,7 @@
             document.getElementById("connecting").hidden = true;
             document.getElementById("prompt").hidden = false;
             document.getElementById("host").value = host;
-            launch_backend(host);
+            //launch_backend(host);
         }
         function try_connect() {
             document.getElementById("connecting").hidden = false;
@@ -163,12 +163,13 @@
             }
         }
         setTimeout(try_connect, 1);
+        /*
         function launch_backend(host) {
             const { ipcRenderer } = require('electron');
             ipcRenderer.send('launch_backend',  {
                 "host": host
             });
-        }
+        }*/
     </script>
     <div class="centered" id="connecting" hidden="true">
       <p>
